--- a/index.html
+++ b/index.html
@@ -8,12 +8,18 @@
 </head>
 <body>
     <header>
-        <h1>Phytochem</h1>
+        <a href="#" id="logo">LOGO</a>
+        <button id="openMenu">&#9776</button>
+        <nav id="menu">
+            <button id="closeMenu">X</button>
+            <a href="#">Início</a>
+            <a href="#">Produtos</a>
+            <a href="#">Sobre</a>
+            <a href="#">Contato</a>
+        </nav>
 
     </header>
-    <nav>
-        <p>Menu</p>
-    </nav>
+    
     <main>
         <p>Princial</p>
 
