--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
                 <source src="movie/mov.mp4" type="video/mp4">
                 Seu navegador não suporta o elemento de vídeo.
             </video>
-            <div class="content">
+            <div class="inicio-content">
                 <h1>Pesquisa e Desenvolvimento para Produtos Naturais</h1>
                 <p>Consultoria técnico-científica que atua em pesquisa de desenvolvimento de produtos naturais, avaliação de estabilidade e controle de qualidade.</p>
             </div>
