--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <meta name="keywords" content="PhytoChem, pesquisa, desenvolvimento, produtos naturais, fitoterápicos, controle de qualidade, estabilidade, consultoria">
     <link rel="canonical" href="https://phytochem.com.br/">
     <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="responsivestyles.css">
 
 </head>
 
@@ -15,9 +16,13 @@
 
     <header class="grad1">
         <div class="div-img-logo" >
-            <img src="img/logo.png" alt="PhytoChem Logo" >
+            <a href="index.html">
+                <img src="img/logo.png" alt="PhytoChem Logo">
         </div>
-        <nav>
+
+        <button id="openMenu">&#9776</button>
+        <nav id="menu">
+            <button id="closeMenu">X</button>
             <ul>
                 <li><a href="#inicio">Início</a></li>
                 <li><a href="#sobre-nos">Sobre Nós</a></li>
@@ -156,5 +161,9 @@
         
         <p class="copy">&copy; 2025 Todos os direitos reservados. Desenvolvido por <a href="https://commit.dev.br/">Commit.dev</a>.</p>
     </footer>
+
+    <script type="text/javascript" src="script.js" >
+    </script>
+
 </body>
 </html>
