--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
             <article class="article-service">
                 <div class="container-bloco">
                     <div class="img-service" >
-                        <img src="img/imagem1.png" alt="">
+                        <img src="img/imagem2.png" alt="">
                     </div>
                     <div class="txt-service">
                         <h3>Estabilidade e Vida de Prateleira</h3>
@@ -120,7 +120,7 @@
             <article class="article-service">
                 <div class="container-bloco">
                     <div class="img-service" >
-                        <img src="img/imagem1.png" alt="">
+                        <img src="img/imagem2.png" alt="">
                     </div>
                     <div class="txt-service">
                         <h3>Treinamentos Sob Medida</h3>
@@ -142,15 +142,10 @@
                         <img src="img/imagem1.png" alt="">
                     </div>
                     <div class="txt-service">
-                        <h3>Estudos de Viabilidade Técnica e Mercado</h3>
-                        <p>
-                            <ul>
-                                <li>Propriedades e aplicações tecnológicas</li>
-                                <li>Avaliação de mercado</li>
-                                <li>Estudos e prospecções estatísticas</li>
-                                <li>Informações legais e legislação</li>
-                            </ul>
-                        </p>
+                        <h3>Estudos de Viabilidade Técnica e Mercado</h3>            <p>Propriedades e aplicações tecnológicas</p>
+                        <p>Avaliação de mercado</p>
+                        <p>Estudos e prospecções estatísticas</p>
+                        <p>Informações legais e legislação</p>
                     </div>
                 </div>
             </article>
