--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
 <body>
 
-    <header class="grad1">
+    <header >
         <div class="div-img-logo" >
             <a href="index.html">
                 <img src="img/logo.png" alt="PhytoChem Logo"></a>
