--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
         
             <div class="header-movel" id="headerMovel">
                 <a href="index.html">
-                    <img src="img/logo-blue.png" alt="PhytoChem Logo" class="logoimg"></a>
+                    <img src="img/logo-black.png" alt="PhytoChem Logo" class="logoimg"> </a>
                 
                 <button id="openMenu">&#9776</button>
                 <nav id="menu">
