--- a/index.html
+++ b/index.html
@@ -249,13 +249,12 @@
 
 
 
-    <footer>
+    <footer >
 
-        <div class="footer-container">
-            <div class="logo">
-                <img src="logo.png" alt="Biocientific Logo">
-                <h2>Biocientific</h2>
-                <p>LABORATÓRIOS</p>
+        <div class="footer-container ">
+            <div class="footer-logo">
+                <img src="img/logo-text-branco.png" alt="PhytoChem Logo">
+                
             </div>
             <div class="info-section">
                 <h3>Endereço</h3>
@@ -270,17 +269,17 @@
                 <span class="contato-footer-texto">+55 19 9 8102-4043</span>
                 <br>
                 <span class="material-symbols-outlined contato-footer-icone">mail </span>
-                <span  class="contato-footer-texto">biocientific@biocientific.com.br</span>
+                <span  class="contato-footer-texto">comercial@phytochem.com.br</span>
                 <div class="social-icons">
-                    <a href="#"><img src="linkedin.png" alt="LinkedIn"></a>
-                    <a href="#"><img src="instagram.png" alt="Instagram"></a>
+                    <a href="#"><img src="img/linkedin.png" alt="LinkedIn"></a>
+                    <a href="#"><img src="img/instagram.png" alt="Instagram"></a>
                 </div>
 
             </div>
 
         </div>
         <div class="footer-bottom">
-            <p>© Biocientific Laboratórios. Todos os direitos reservados. Design: 095design.</p>
+            <p>© Phytochem. Todos os direitos reservados. Design: <a href="https://commit.dev.br/">Commit.dev</a></p>
         </div>
 
     </footer>
