--- a/index.html
+++ b/index.html
@@ -147,56 +147,24 @@
         </article>
     </section>
 
-    <section id="sobre-nos">
+    <section id="sobre-nos" class="">
         <h2>Sobre Nós</h2>
-        <h3>Missão</h3>
-        <p>Assessorar nossos clientes com excelência e foco em resultados, garantindo produtos e serviços de
-            qualidade, no que diz respeito aos aspectos sensoriais, tecnológicos e com custos sustentáveis que
-            possam garantir a concorrência no mercado.</p>
-        <h3>Visão</h3>
-        <p>Oferecer soluções customizadas de consultoria com alta qualidade na pesquisa e desenvolvimento de
-            produtos naturais, com enfoque em fitoterápicos, priorizando as necessidades de nossos clientes e,
-            assim, promover seu desenvolvimento e nosso crescimento.</p>
-        <h3>Valores</h3>
-        <p>Nossos trabalhos são sustentados pela competência, comprometimento e confiança, buscando sempre a
-            excelência em nossos serviços prestados e visando a qualidade dos resultados na entrega para nossos
-            clientes.</p>
+        <div id="sobre-container" class="sobre-container width-100">
+            <div class="sobre-caixa">
+                <h3>Missão</h3>
+                <p>Assessorar nossos clientes com excelência e foco em resultados, garantindo produtos e serviços de qualidade, no que diz respeito aos aspectos sensoriais, tecnológicos e com custos sustentáveis que possam garantir a concorrência no mercado.</p>
+            </div>
+            <div class="sobre-caixa">
+                <h3>Visão</h3>
+                <p>Oferecer soluções customizadas de consultoria com alta qualidade na pesquisa e desenvolvimento de produtos naturais, com enfoque em fitoterápicos, priorizando as necessidades de nossos clientes e, assim, promover seu desenvolvimento e nosso crescimento.</p>
+            </div>
+            <div class="sobre-caixa">
+                <h3>Valores</h3>
+                <p>Nossos trabalhos são sustentados pela competência, comprometimento e confiança, buscando sempre a excelência em nossos serviços prestados e visando a qualidade dos resultados na entrega para nossos clientes.</p>
+            </div>
+        </div>
     </section>
 
-    <!--  <section id="faq">
-            <h2>FAQ - Perguntas Frequentes</h2>
-            <div class="faq-item">
-                <button class="faq-question">O que é PhytoChem?</button>
-                <div class="faq-answer">
-                    <p>PhytoChem é uma empresa de consultoria técnico-científica especializada em pesquisa e desenvolvimento de produtos naturais, avaliação de estabilidade e controle de qualidade.</p>
-                </div>
-            </div>
-            <div class="faq-item">
-                <button class="faq-question">Quais serviços a PhytoChem oferece?</button>
-                <div class="faq-answer">
-                    <p>Oferecemos ensaios físico-químicos, estudos de estabilidade e vida de prateleira, elaboração de documentos da qualidade, treinamentos sob medida e estudos de viabilidade técnica e mercado.</p>
-                </div>
-            </div>
-            <div class="faq-item">
-                <button class="faq-question">Como posso entrar em contato com a PhytoChem?</button>
-                <div class="faq-answer">
-                    <p>Você pode entrar em contato conosco através do e-mail, WhatsApp ou pelo formulário de contato disponível em nosso site.</p>
-                </div>
-            </div>
-        </section> -->
-
-    <script type="text/javascript">
-        document.addEventListener('DOMContentLoaded', function () {
-            const faqQuestions = document.querySelectorAll('.faq-question');
-
-            faqQuestions.forEach(question => {
-                question.addEventListener('click', () => {
-                    const answer = question.nextElementSibling;
-                    answer.style.display = answer.style.display === 'block' ? 'none' : 'block';
-                });
-            });
-        });
-    </script>
 
     <section class="acao">
 
@@ -279,7 +247,7 @@
 
         </div>
         <div class="footer-bottom">
-            <p>© Phytochem. Todos os direitos reservados. Design: <a href="https://commit.dev.br/">Commit.dev</a></p>
+            <p> Phytochem ©2025. Todos os direitos reservados <span><a href="https://commit.dev.br/"> Design: Commit.dev</a></p></span>
         </div>
 
     </footer>
