--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>PhytoChem - Pesquisa e Desenvolvimento para Produtos Naturais</title>
+    <title>Phytochem - Pesquisa e Desenvolvimento para Produtos Naturais</title>
     <meta name="description"
         content="Empresa de consultoria técnico-científica especializada em pesquisa e desenvolvimento de produtos naturais, avaliação de estabilidade e controle de qualidade.">
     <meta name="keywords"
@@ -72,7 +72,7 @@
 
     <!-- SERVIÇOS -->
 
-    <section class="width-100">
+    <section id="servicos" class="width-100">
 
         <div class="corpodasecao">
             <h2 class="h2serv">Nossos Serviços</h2>
@@ -138,18 +138,19 @@
     </section>
 
 
-    <section id="blog">
+    <!-- <section id="blog">
         <h2>Blog & Artigos</h2>
         <article>
             <h3>Gestão da Qualidade Laboratorial</h3>
             <p>Vamos falar sobre gestão da qualidade laboratorial, um assunto muito importante!</p>
             <a href="INSERIR LINK DO ARTIGO AQUI">Leia mais</a>
         </article>
-    </section>
+    </section> -->
 
-    <section id="sobre-nos" class="">
+    <section id="sobre" class="">
         <h2>Sobre Nós</h2>
-        <div id="sobre-container" class="sobre-container width-100">
+
+        <div id="sobre-container" class="sobre-container">
             <div class="sobre-caixa">
                 <h3>Missão</h3>
                 <p>Assessorar nossos clientes com excelência e foco em resultados, garantindo produtos e serviços de qualidade, no que diz respeito aos aspectos sensoriais, tecnológicos e com custos sustentáveis que possam garantir a concorrência no mercado.</p>
@@ -166,22 +167,23 @@
     </section>
 
 
-    <section class="acao">
+    <!-- <section class="acao">
 
         <h2>Seção chamada de ação</h2>
         <p>Ver com Aline principal produto e inserir aqui a chamada, como no exemplo da imagem ao fundo</p>
-    </section>
+    </section> -->
 
 
 
     <!--               formulário de contato              -->
 
-    <div>
-        <h2>Agendamentos</h2>
+    <section id="contato">
+        <h2>Contato</h2>
+
         <div class="containerform">
             <div class="info">
-                <h3>Agendamento de Coleta / Envio de Materiais</h3>
-                <p>Preencha o formulário para Agendar a Coleta ou o Envio de Materiais.</p>
+                <h3>Entre em contato coma Phytochem</h3>
+                <p>Utilize o formulário ao lado para nos enviar uma mensagem.</p>
 
             </div>
             <form id="collectionForm">
@@ -192,10 +194,10 @@
                 <label for="phone"></label>
                 <input type="tel" id="phone" placeholder="Telefone para Contato*" required>
                 <label for="address"></label>
-                <input type="text" id="address" placeholder="Endereço para Coleta / Envio de Material">
+                <!--<input type="text" id="address" placeholder="Endereço para Coleta / Envio de Material">
                 <label for="date">Data Solicitada</label>
                 <input type="date" id="date">
-                <!-- <label>Tipo de Serviço:</label>
+                 <label>Tipo de Serviço:</label>
                     <div>
                         <input type="checkbox" id="collection" name="service" value="coleta">
                         <label for="collection">Agendamento de Coleta de Material</label>
@@ -211,7 +213,7 @@
                 <button type="submit" class="grad2">ENVIAR</button>
             </form>
         </div>
-    </div>
+    </section>
 
     <!--                FOOTER             -->
 
