--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
     <section id="inicio" class="inicio">
 
         <video autoplay muted loop id="section-video">
-            <source src="movie/mov.mp4" type="video/mp4">
+            <source src="movie/mov4.mp4" type="video/mp4">
             Seu navegador não suporta o elemento de vídeo.
         </video>
 
@@ -72,10 +72,15 @@
 
     <!-- SERVIÇOS -->
 
+    <div class="new-section grad1">
+        <h2 class="h2serv">Nossos Serviços</h2>
+    </div>
+
     <section id="servicos" class="width-100">
+        
 
         <div class="corpodasecao">
-            <h2 class="h2serv">Nossos Serviços</h2>
+            
 
             <div class="caixa-serv">
                 <img src="img/ensaios.jpg" class="img-serv">
