--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
         href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
 
     <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="stylesmobile.css">
 
 
 </head>
@@ -77,7 +78,7 @@
     </div>
 
     <section id="servicos" class="width-100">
-        
+        <button class="scroll-button left" onclick="scrollServicos('left')">&#10094;</button> <!-- Botão esquerdo -->
 
         <div class="corpodasecao">
             
@@ -137,22 +138,15 @@
                 </p>
             </div>
         </div>
+        <button class="scroll-button right" onclick="scrollServicos('right')">&#10095;</button> <!-- Botão direito -->
 
 
 
     </section>
 
 
-    <!-- <section id="blog">
-        <h2>Blog & Artigos</h2>
-        <article>
-            <h3>Gestão da Qualidade Laboratorial</h3>
-            <p>Vamos falar sobre gestão da qualidade laboratorial, um assunto muito importante!</p>
-            <a href="INSERIR LINK DO ARTIGO AQUI">Leia mais</a>
-        </article>
-    </section> -->
-
-    <section id="sobre" class="">
+ 
+    <section id="sobre" class="sobre">
         <h2>Sobre Nós</h2>
 
         <div id="sobre-container" class="sobre-container">
