--- a/index.html
+++ b/index.html
@@ -63,10 +63,14 @@
             Seu navegador não suporta o elemento de vídeo.
         </video>
 
-        <div class="inicio-content">
+        <div class="inicio-content1">
+            <img src="img/logo-vert-white.png" alt="Banner Phytochem" class="banner-img">
             <h1>Análise, pesquisa e Desenvolvimento para Produtos Naturais</h1>
-            <p>Consultoria técnico-científica que atua em pesquisa de desenvolvimento de produtos naturais, avaliação de
-                estabilidade e controle de qualidade.</p>
+            
+        </div>
+
+        <div class="inicio-content2">
+            <p>Consultoria técnico-científica que atua em pesquisa de desenvolvimento de produtos naturais, avaliação de estabilidade e controle de qualidade.</p>
         </div>
     </section>
 
