--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
         </video>
 
         <div class="inicio-content1">
-            <img src="img/logo-vert-white.png" alt="Banner Phytochem" class="banner-img">
+            <img src="img/logo-vert-blue.png" alt="Banner Phytochem" class="banner-img">
             <h1>Análise, pesquisa e Desenvolvimento para Produtos Naturais</h1>
             
         </div>
