--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
 
     <link rel="stylesheet" href="styles.css">
-    <link rel="stylesheet" href="stylesmobile.css">
+    <link rel="stylesheet" href="stylesresponsiv.css">
 
 
 </head>
@@ -59,7 +59,7 @@
     <section id="inicio" class="inicio">
 
         <video autoplay muted loop id="section-video">
-            <source src="movie/mov4.mp4" type="video/mp4">
+            <source src="movie/mov.mp4" type="video/mp4">
             Seu navegador não suporta o elemento de vídeo.
         </video>
 
