--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
                     <a href="#">Sobre</a>
                     <a href="#">Serviços</a>
                     <a href="#">Contato</a>
-                    <a href="#">Área do cliente</a>
+                    <!-- <a href="#">Área do cliente</a> -->
                 </nav>
             </div>
         </div>
@@ -59,7 +59,7 @@
     <section id="inicio" class="inicio">
 
         <video autoplay muted loop id="section-video">
-            <source src="movie/mov.mp4" type="video/mp4">
+            <source src="movie/mov4.mp4" type="video/mp4">
             Seu navegador não suporta o elemento de vídeo.
         </video>
 
