--- a/index.html
+++ b/index.html
@@ -96,11 +96,11 @@
 
 
         <div class="sobre1-container1">
-            <h3>Buscamos o Poder da Natureza para Transformar em Ciência e Bem-Estar</h3>
+            <h3>Buscamos na Natureza o Poder de Transformar em Ciência em Bem-Estar</h3>
 
             <div class="sobre-texto1">
-                <p>A Phytochem nasceu com proposito de unir o potencial da biodiversidade brasileira à tecnologia de
-                    ponta, criando soluções naturais que revolucionam os mercados farmacêutico, cosmético e de
+
+                <p>A Phytochem nasceu com proposito de unir o potencial da biodiversidade brasileira à tecnologia de ponta, criando soluções naturais que revolucionam os mercados farmacêutico, cosmético e de
                     alimentos. Com mais de 30 anos de expertise, estamos comprometidos em transformar os ativos da
                     natureza em inovação que promove saúde, beleza e sustentabilidade. <br>
                     Nossa missão vai além da produção de extratos botânicos de alta qualidade. Através de práticas
@@ -112,7 +112,7 @@
 
             <div class="sobre1-container2">
 
-                <div class="sobre-caixa">
+                <div class="sobre1-caixa">
                     <span class="span-h4">
                         <img src="img/icon/icon-Roxo.svg" alt="Icone Phytochem" class="icon-imgh4">
                         <h4>Inovação que Nasce da Natureza</h4>
@@ -121,7 +121,7 @@
                         flora brasileira. Por isso, investimos constantemente em pesquisa e desenvolvimento,
                         transformando compostos naturais em soluções tecnológicas que atendem às demandas globais.</p>
                 </div>
-                <div class="sobre-caixa">
+                <div class="sobre1-caixa">
                     <span class="span-h4">
                         <img src="img/icon/icon-Lilas.svg" alt="Icone Phytochem" class="icon-imgh4">
                         <h4>Sustentabilidade com Propósito</h4>
@@ -132,7 +132,7 @@
                         equilíbrio harmonioso entre o homem e a natureza.</p>
                 </div>
 
-                <div class="sobre-caixa">
+                <div class="sobre1-caixa">
                     <span class="span-h4">
                         <img src="img/icon/icon-Azul.svg" alt="Icone Phytochem" class="icon-imgh4">
                         <h4>Impacto que Transforma</h4>
@@ -143,7 +143,7 @@
                         só é verdadeiro quando beneficia a todos – pessoas, planeta e negócios.</p>
                 </div>
 
-                <div class="sobre-caixa">
+                <div class="sobre1-caixa">
                     <span class="span-h4">
                         <img src="img/icon/icon-Verde.svg" alt="Icone Phytochem" class="icon-imgh4">
                         <h4>Junte-se a Nós na Revolução Natural</h4>
