--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
 
             <div class="inicio-content1">
                 <img src="img/logo-vert-blue.png" alt="Banner Phytochem" class="banner-img">
-                <h1>Análise, pesquisa e Desenvolvimento para Produtos Naturais</h1>
+                <h1>Laboratório de Análise, Pesquisa e Desenvolvimento para Produtos Naturais</h1>
 
             </div>
 
