--- a/index.html
+++ b/index.html
@@ -43,6 +43,7 @@
                 </a>
 
                 <button id="openMenu">&#9776</button>
+                
                 <nav id="menu">
                     <button id="closeMenu">X</button>
                     <a href="#">Início</a>
@@ -59,7 +60,7 @@
     <section id="inicio" class="inicio">
 
         <video autoplay muted loop id="section-video">
-            <source src="movie/mov4.mp4" type="video/mp4">
+            <source src="movie/mov2.mp4" type="video/mp4">
             Seu navegador não suporta o elemento de vídeo.
         </video>
 
@@ -96,7 +97,7 @@
 
 
         <div class="sobre1-container1">
-            <h3>Buscamos na Natureza o Poder de Transformar em Ciência em Bem-Estar</h3>
+            <h3>Buscamos na Natureza o Poder de Transformar  Ciência em Bem-Estar</h3>
 
             <div class="sobre-texto1">
 
@@ -191,9 +192,10 @@
 
 
         <div class="width-100">
-
+                
+            <!--
             <button class="scroll-button left" onclick="scrollServicos('left')">&#10094;</button>
-            <!-- Botão esquerdo -->
+             Botão esquerdo -->
 
             <div class="corpodasecao">
 
@@ -252,8 +254,9 @@
                     </p>
                 </div>
             </div>
+            <!--
             <button class="scroll-button right" onclick="scrollServicos('right')">&#10095;</button>
-            <!-- Botão direito -->
+             Botão direito -->
         </div>
 
     </section>
