--- a/index.html
+++ b/index.html
@@ -27,11 +27,11 @@
             <div class="contatos-top-container ">
 
                 <span class="material-symbols-outlined contatos-top-icone">call </span>
-                <span class="contato-top-texto">+55 19 9 8102-4043</span>
+                <a href="https://wa.me/5519981024043" target="_blank" class="contato-top-texto" style="text-decoration: none;">19 9 8102-4043</a>
                 <span class="material-symbols-outlined contatos-top-icone">schedule</span>
                 <span class="contato-top-texto">Seg - Sex: 8:00 - 17:00</span>
                 <span class="material-symbols-outlined contatos-top-icone">location_on</span>
-                <span class="contato-top-texto">Av. José Lozano Araújo, 1136A - Jardim Ypê, Paulínia - SP</span>
+                <a href="https://www.google.com/maps/search/?api=1&query=Av.+Jos%C3%A9+Lozano+Ara%C3%BAjo,+1136A+-+Jardim+Yp%C3%AA,+Paul%C3%ADnia+-+SP" target="_blank" class="contato-top-texto" style="text-decoration: none;">Av. José Lozano Araújo, 1136A - Jardim Ypê, Paulínia - SP | ver no mapa</a>
             </div>
         </div>
 
@@ -90,7 +90,7 @@
 
     <section id="sobre">
 
-        <div class="new-section grad1">
+        <div class="new-section">
             <h2 class="h2serv">Quem somos</h2>
         </div>
 
@@ -186,7 +186,7 @@
 
     <section id="servicos">
 
-        <div class="new-section grad1">
+        <div class="new-section">
             <h2 class="h2serv">Serviços Técnicos</h2>
         </div>
 
@@ -330,6 +330,7 @@
                 <p>Av. José Lozano Araújo, 1136A</p>
                 <p>Jardim Ypê, Paulínia - SP</p>
                 <p>CEP 13140-000</p>
+                <a href="https://www.google.com/maps/search/?api=1&query=Av.+Jos%C3%A9+Lozano+Ara%C3%BAjo,+1136A+-+Jardim+Yp%C3%AA,+Paul%C3%ADnia+-+SP" target="_blank">Ver no mapa</a>
             </div>
 
             <div class="contact-section">
@@ -340,8 +341,8 @@
                 <span class="material-symbols-outlined contato-footer-icone">mail </span>
                 <span class="contato-footer-texto">comercial@phytochem.com.br</span>
                 <div class="social-icons">
-                    <a href="#"><img src="img/linkedin.png" alt="LinkedIn"></a>
-                    <a href="#"><img src="img/instagram.png" alt="Instagram"></a>
+                    <a href="https://www.linkedin.com/company/phytochemlab/" target="_blank"><img src="img/linkedin.png" alt="LinkedIn"></a>
+                    <a href="https://www.instagram.com/phytochem.servicos/" target="_blank"><img src="img/instagram.png" alt="Instagram"></a>
                 </div>
 
             </div>
