--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
             <div class="header-content">
 
                 <a href="index.html">
-                    <img src="img/logo-white.png" alt="PhytoChem Logo" class="logoimg" id="imglogo">
+                    <img src="img/logo-roxo.png" alt="PhytoChem Logo" class="logoimg" id="imglogo">
                 </a>
 
                 <button id="openMenu">&#9776</button>
@@ -67,7 +67,7 @@
         <div class="inicio-container">
 
             <div class="inicio-content1">
-                <img src="img/logo-vert-blue.png" alt="Banner Phytochem" class="banner-img">
+                <img src="img/logo-vert-roxo.png" alt="Banner Phytochem" class="banner-img">
                 <h1>Laboratório de Análise, Pesquisa e Desenvolvimento em Produtos Naturais</h1>
 
             </div>
